Some additional styling for non-standard components.

--- a/defend_data_capture/supply_chains/templates/supply_chains/temp_mu_info_form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/temp_mu_info_form.html
@@ -4,7 +4,7 @@
     <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
     {% with strategic_action.last_submitted_update as previous_update %}
         {% if previous_update.content %}
-            <div class="dit-panel">
+            <div class="app-dit-panel">
                 <h2 class="govuk-heading-m">Last update</h2>
                 {{ previous_update.content }}
             </div>
