Showing the "details" forms doesn't work yet, but other than that…

--- a/defend_data_capture/supply_chains/templates/supply_chains/temp_mu_info_form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/temp_mu_info_form.html
@@ -18,7 +18,7 @@
                     Latest monthly update
                 </label>
                 </h2>
-                <div class="">
+                <div class="govuk-hint">
                     <p>Include details of:</p>
                     <ul class="govuk-list govuk-list--bullet">
                         <li>activities undertaken</li>
