--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/reason-for-delays.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/reason-for-delays.html
@@ -5,23 +5,5 @@
     {{ form.reason_for_delays }}
 </div>
 {% if form.will_completion_date_change %}
-    <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                <h3 class="govuk-fieldset__heading ">
-                    {{ form.will_completion_date_change.label }}
-                </h3>
-            </legend>
-            <div class="govuk-radios">
-                {% for radio in form.will_completion_date_change %}
-                    <div class="govuk-radios__item">
-                        {{ radio.tag }}
-                        <label class="govuk-label govuk-radios__label" for="{{ radio.id_for_label }}">
-                            {{ radio.choice_label }}
-                        </label>
-                    </div>
-                {% endfor %}
-            </div>
-        </fieldset>
-    </div>
+    {% include 'supply_chains/includes/yes-no.html' with yes_no_field=form.will_completion_date_change %}
 {% endif %}
