--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-info-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-info-form.html
@@ -36,6 +36,7 @@
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                     Cancel
                 </button>
-            </div>        </form>
+            </div>
+        </form>
     {% endblock form %}
 {% endblock body %}
