Include supply chain summary in task-complete view
Introduce update_complete boolean to simplify markup within tasklist view

--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -20,7 +20,7 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            Update Incomplete
+            {{ view.update_message }}
         </strong>
         <div style="padding-left: 45px;padding-top: 5px;">You have completed {{ view.completed_sa }} of {{ view.total_sa }}
             mandatory sections.</div>
