Introduce stylesheet for tasklist view

--- a/defend_data_capture/supply_chains/templates/task_complete.html
+++ b/defend_data_capture/supply_chains/templates/task_complete.html
@@ -37,9 +37,9 @@
     </p>
 
     <div class="govuk-inset-text">
-        You have given updates for <storng>
+        You have given updates for <strong>
             {{ view.num_updated_supply_chains }} of {{ view.sum_of_supply_chains }} supply chains.
-        </storng>
+        </strong>
     </div>
 
     <p class="govuk-body">
