Introduce slug field for SC, SA and SAU models
Update Tasklist view with slug pattern URL

Update TaskComplete view with slug url

--- a/defend_data_capture/supply_chains/templates/index.html
+++ b/defend_data_capture/supply_chains/templates/index.html
@@ -45,7 +45,7 @@
             {% for supplychain in supply_chains %}
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">
-                        <a href={% url 'tlist' chain=supplychain.name %}  class="govuk-link">{{ supplychain.name }}</a>
+                        <a href={% url 'tlist' sc_slug=supplychain.slug %}  class="govuk-link">{{ supplychain.name }}</a>
                     </th>
                     <td class="govuk-table__cell">{{supplychain.strategic_action_count}}</td>
                     <td class="govuk-table__cell">{{supplychain.last_submission_date|date:"SHORT_DATE_FORMAT"}}</td>
