--- a/defend_data_capture/supply_chains/templates/task_complete.html
+++ b/defend_data_capture/supply_chains/templates/task_complete.html
@@ -21,7 +21,7 @@
         </h1>
         <div class="govuk-panel__body">
             Thank you for submitting your monthly<br>
-            update for the <strong>{{ view.sc_name }}</strong> supply chain.
+            update for the <strong>{{ view.supply_chain.name }}</strong> supply chain.
         </div>
     </div>
 
