--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -8,13 +8,13 @@
             <a class="govuk-breadcrumbs__link" href={% url 'index' %}>Home</a>
           </li>
           <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="#">Update {{ view.sc_name }}</a>
+            <a class="govuk-breadcrumbs__link" href="#">Update {{ view.supply_chain.name }}</a>
           </li>
         </ol>
       </div>
       <br>
 
-    <h1 class="govuk-heading-xl"> Update {{ view.sc_name }} </h1>
+    <h1 class="govuk-heading-xl"> Update {{ view.supply_chain.name }} </h1>
 
     <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -40,7 +40,7 @@
             {% for update in view.sa_updates %}
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell">
-                    <a href="#" class="govuk-link">Update strategic action {{ forloop.counter }} </a>
+                    <a href={{ update.route }} class="govuk-link">Update strategic action {{ forloop.counter }} </a>
                     <p class="tasklist-action-description"> {{ update.description }} </p>
                 </td>
                 <td class="govuk-table__cell">
