e2e tests for SCTaskComplete view
Add fields to strategic action model

Fix the order of SA updates in tasklist view

Search SA updates since last_deadline within tasklist view

--- a/defend_data_capture/supply_chains/templates/index.html
+++ b/defend_data_capture/supply_chains/templates/index.html
@@ -54,8 +54,8 @@
         </tbody>
     </table>
     {% if supply_chains.has_other_pages %}
-        <nav class="moj-pagination">
-            <p class="govuk-visually-hidden" aria-labelledby="pagination-label">Pagination navigation</p>
+        <nav class="moj-pagination" aria-label="pagination">
+            <p class="govuk-visually-hidden">Pagination navigation</p>
             <ul class="moj-pagination__list">
                 {% if supply_chains.has_previous %}
                     <li class="moj-pagination__item  moj-pagination__item--prev">
