--- a/defend_data_capture/assets/stylesheets/supply_chain.scss
+++ b/defend_data_capture/assets/stylesheets/supply_chain.scss
@@ -8,7 +8,7 @@
 }
 
 .tasklist-action-description {
-    color: grey;
+    color: #505050;
     margin-top: 3px;
     margin-bottom: 8px;
     width: 420px;
