Include latest design updates to SC complete view

--- a/defend_data_capture/supply_chains/templates/task_complete.html
+++ b/defend_data_capture/supply_chains/templates/task_complete.html
@@ -29,18 +29,19 @@
     <h2 class="govuk-heading-m">What happens next</h2>
 
     <p class="govuk-body">
-        We’ve sent your update to the Global supply chains team. who will<br>
-        use this data to inform Programme Board decision making.
-    </p>
-    <p class="govuk-body">
-        They will contact you if anything needs addressing or following up.
-    </p>
-
-    <div class="govuk-inset-text">
         You have given updates for <strong>
             {{ num_updated_supply_chains }} of {{ sum_of_supply_chains }} supply chains.
         </strong>
-    </div>
+    </p>
+
+    <p class="govuk-body">
+        Your update has been sent to the Global Supply Chains team who will use this data to inform Programme Broad decision making.
+    </p>
+
+    <p class="govuk-body">
+        The team will get in touch with you if there are any questions or issues.
+    </p>
+
 
     <p class="govuk-body">
         <span>
