--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -22,7 +22,7 @@
             <span class="govuk-warning-text__assistive">Warning</span>
             {{ view.update_message }}
         </strong>
-        <div class="tasklist-summary">{{ view.completed_sa }} of {{ view.total_sa }}
+        <div class="tasklist-summary">{{ view.completed_updates }} of {{ view.total_sa }}
             mandatory actions are complete.</div>
     </div>
 
