Use two-thrid layout for all pages as per GOV recommendation
Globally preserve session_id during e2e tests

--- a/defend_data_capture/supply_chains/templates/base.html
+++ b/defend_data_capture/supply_chains/templates/base.html
@@ -67,8 +67,10 @@
         {% endblock %}
         <main id="main-content" class="govuk-main-wrapper">
             <div class="govuk-grid-row">
-                {% block body %}
-                {% endblock %}
+                <div class="govuk-grid-column-two-thirds">
+                    {% block body %}
+                    {% endblock %}
+                </div>
             </div>
         </main>
     </div>
