--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block breadcrumbs %}
-<div class="govuk-breadcrumbs">
+<nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href={% url 'index' %}>Home</a>
@@ -10,30 +10,67 @@
         <a class="govuk-breadcrumbs__link" href="#">Update {{ view.supply_chain.name }}</a>
       </li>
     </ol>
-  </div>
+</nav>
 {% endblock %}
 
 {% block body %}
-<div class="govuk-grid-column-three-quarters">
 
     <h1 class="govuk-heading-xl"> Update {{ view.supply_chain.name }} </h1>
 
-    <div class="govuk-warning-text">
-        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-        <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
-            {{ view.update_message }}
-        </strong>
-        <div class="tasklist-summary">{{ view.completed_updates }} of {{ view.total_sa }}
-            mandatory actions are complete.</div>
-    </div>
+    {% if view.update_complete %}
+        <div>
+            <strong>
+                Update completed
+            </strong>
+            <div>
+                {{ view.completed_updates }} of {{ view.total_sa }} mandatory actions are complete.
+            </div>
+        </div>
+    {% else %}
+        <div class="govuk-warning-text">
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                Update incomplete
+            </strong>
+            <div class="tasklist-summary">{{ view.completed_updates }} of {{ view.total_sa }}
+                mandatory actions are complete.</div>
+        </div>
+    {% endif %}
 
+    <br>
+    {% if view.submit_error %}
+        <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+            There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+                Update strategic actions
+            </div>
+        </div>
+    {% endif %}
+    <br>
+
+    {% if view.update_submitted %}
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title"      data-module="govuk-notification-banner">
+            <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                Important
+            </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                All strategic action updates submited.
+            </p>
+            </div>
+        </div>
+    {% endif %}
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header">
-                    <h2 class="govuk-heading-l tasklist-actions-header">Monthly strategic actions updates</h2>
+                    <h2 class="govuk-heading-l tasklist-actions-header">Monthly strategic actions<br> updates</h2>
                 </th>
                 <th scope="col" class="govuk-table__header"></th>
             </tr>
@@ -107,25 +144,28 @@
         <li>
             <a href="#" class="govuk-link">Supply chain summary</a>
             <span>
-                - key information, vulnerability assessment,<br>
+                - key information, vulnerability assessment,
                 scenario assessment, maturity self assessment, risk monitoring,<br>archived strategic actions
             </span>
         </li>
         <li>
             <a href="#" class="govuk-link">Strategic action summary</a>
             <span>
-                - description of the action, impact, strategic<br>action framework category and depedencies
+                - description of the action, impact, strategic action framework category and depedencies
             </span>
         </li>
     </ul>
 
 
-    <form action={% url 'tlist' sc_slug=view.supply_chain.slug %} method="post">
-        {% csrf_token %}
-        <button class="govuk-button" data-module="govuk-button" type="submit" {% if not view.enable_submit %}disabled{%endif%}>
-            Submit update
-        </button>
-    </form>
-</div>
+    {% if not view.update_submitted %}
+        <form action={% url 'tlist' sc_slug=view.supply_chain.slug %} method="post">
+            {% csrf_token %}
+            <button class="govuk-button" data-module="govuk-button" type="submit">
+                Submit update
+            </button>
+        </form>
+    {% else %}
+    <a href={% url 'index' %} class="govuk-back-link">Back</a>
+    {% endif %}
 
 {% endblock %}
