--- a/defend_data_capture/supply_chains/templates/supply_chains/forms/widgets/gds-radio-group.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/forms/widgets/gds-radio-group.html
@@ -1,10 +1,12 @@
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+        {% if select_label %}
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h3 class="govuk-fieldset__heading ">
-                {{ widget.label }}
+                {{ select_label }}
             </h3>
         </legend>
+        {% endif %}
         <div class="govuk-radios{% if has_details %}  govuk-radios--conditional{% endif %}"{% if has_details %} data-module="govuk-radios"{% endif %}>
             {% for _, options, index in widget.optgroups %}
                 {% with options.0 as radio %}
