--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
@@ -2,17 +2,24 @@
 
 {% block body %}
     <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
-    {% with strategic_action.last_submitted_update as previous_update %}
-        {% if previous_update.content %}
-            <div class="dit-panel">
-                <h2 class="govuk-heading-m">There is no expected completion date against this action</h2>
+        {% if strategic_action_update.strategic_action.target_completion_date %}
+            <div class="govuk-inset-text">
+                <h2 class="govuk-heading-s">Current estimated date of completion</h2>
+                <p>{{ strategic_action_update.strategic_action.target_completion_date|date:"j F Y" }}</p>
+            </div>
+        {% else %}
+            <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                    <span class="govuk-warning-text__assistive">Warning</span>
+                    There is no expected completion date for this action.
+                </strong>
             </div>
         {% endif %}
-    {% endwith %}
-    {% block form %}
         <form method="post" action="">
             {% csrf_token %}
             {{ form.is_completion_date_known }}
+{#            {% include 'supply_chains/includes/completion-date.html' with field=form.is_completion_date_known %}#}
             <div class="govuk-button-group">
                 <button class="govuk-button" data-module="govuk-button" type="submit">
                     Save and continue
@@ -23,5 +30,4 @@
                 </button>
             </div>
         </form>
-    {% endblock form %}
 {% endblock body %}
