Link task list to strategic action summary page

--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -123,7 +123,7 @@
                 </span>
             </li>
             <li>
-                <a href="#" class="govuk-link">Strategic action summary</a>
+                <a href="{% url 'strat_action_summary' view.supply_chain.slug %}" class="govuk-link">Strategic action summary</a>
                 <span>
                     - description of the action, impact, strategic action framework category and depedencies
                 </span>
