Change to copy from designs.

--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
@@ -12,7 +12,7 @@
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                     <span class="govuk-warning-text__assistive">Warning</span>
-                    There is no expected completion date for this action.
+                    There's no expected completion date for this action.
                 </strong>
             </div>
         {% endif %}
